Fix display scrollbar issue and make sure tabContainer is started.

--- a/widgets/RelatedRecordTable/css/styles.css
+++ b/widgets/RelatedRecordTable/css/styles.css
@@ -7,12 +7,7 @@
      padding: 0;
 }
 
-.RelatedRecordsTableParent {
-    overflow:hidden;
+
+.relatedRecordTableWidget .dijitTabPaneWrapper {
+    border-width: 0;
 }
-
-
-/*.top .relatedRecordTableWidget .dijitTabPaneWrapper, 
-.bottom .relatedRecordTableWidget .dijitTabPaneWrapper {
-    height:80%;
-}*/
